--- a/resources/style.css
+++ b/resources/style.css
@@ -11,18 +11,23 @@ html {
   cursor: default;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
   position: relative;
+  background-color: aliceblue;
+  font-family: "Courier New", Courier, monospace;
 
   /* Prevent the content from being selectionable */
   -webkit-user-select: none;
   user-select: none;
 }
 
-input, textarea {
+input,
+textarea {
   -webkit-user-select: auto;
   user-select: auto;
 }
